--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# .gitignore
+.streamlit/secrets.toml
+__pycache__/
+*.py[cod]
+token.json
+.env
